fix: change layout to fix display error on IE, and optimize experience on higher resolution

--- a/src/styles/post.less
+++ b/src/styles/post.less
@@ -6,7 +6,7 @@
   margin: 0 auto;
   margin-top: 20px;
   margin-bottom: 60px;
-  width: @postContentWidth;
+  width: calc(100% - (@minimalContentBlank * 2));
   height: 100%;
 }
 
